--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,10 @@
 ja:
+  activerecord:
+    attributes:
+      user:
+        name: "名前"
+        title: "タイトル"
+        content: "詳細"
   views:
     pagination:
       first: "&laquo; 最初"
@@ -6,3 +12,4 @@ ja:
       previous: "&lsaquo; 前"
       next: "次 &rsaquo;"
       truncate: "..."
+
